# react-qml-quickstart

./: .gitignore  README.md  package.json  react-qml.config.js  tsconfig.json
nim/: .gitignore  main.nim  main.qrc  reactqmlexample.nimble  uibundle
rust/: Cargo.toml  main.qml
rust/resources/: resources.pro  uibundle
rust/src/: main.rs
ui/: App.tsx  index.qml  index.tsx
ui/components/: Counter.tsx  counter.reducer.ts
ui/store/: makeStore.ts  rootReducer.ts
